tensor flow files and popup

--- a/blink-detector.html
+++ b/blink-detector.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Reminder to blink! Wahoo!</h1>
-    <script src="popup.js"></script>
+    <script src="blink-detector.js"></script>
   </body>
 </html>
