--- a/timer/timer.html
+++ b/timer/timer.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel = "stylesheet" href = "timer.css">
+    <link rel="stylesheet" href="timer.css">
   </head>
   <body>
-    <div class = "popupContainer">
+    <div class="popupContainer">
       <!-- first screen: welcome -->
-       <div id = "welcomeScreen">
+       <div id="welcomeScreen">
           <div class="angel">👼</div>
           <h1>Hello!</h1>
           <p>Ready to protect your eyes?</p>
-          <button onclick="startTimer()">Start</button>
+          <button id="startButton">Start</button>
        </div>
 
        <!-- second screen: working -->
-        <div id = "workingScreen" class = "hidden">
+        <div id="workingScreen" class="hidden">
           <div class="angel">✨</div>
           <h1>Great! I'm watching over you</h1>
           <p>Next break in: <span id="timeRemaining">20:00</span></p>
@@ -22,7 +22,7 @@
         </div>
 
         <!-- third screen: break time! -->
-        <div id = "breakScreen" class = "hidden">
+        <div id="breakScreen" class="hidden">
           <div class="angel">👀</div>
           <h1>Time for a break!</h1>
           <p>Look at something 20 feet away</p>
@@ -31,15 +31,14 @@
         </div>
 
          <!-- fourth screen: ready to go again? -->
-          <div id = "readyScreen" class = "hidden">
+          <div id="readyScreen" class="hidden">
             <div class="angel">💪</div>
             <h1>Great job!</h1>
             <p>Ready for your next session?</p>
-            <button onclick="startNextSession()">Continue</button>
+            <button id="continueButton">Continue</button>
           </div>
     </div>
 
-
-    <script src = "timer.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
